# RustRocket

./: .gitignore  Cargo.toml  README.md  RUN.md  index.html
client/: .gitignore  Cargo.toml  index.html
client/src/: csvreader.rs  lib.rs  rocket_data.rs  webgl.rs
pkg/: README.md  RustRocket.js  RustRocket_bg.wasm  index.html  package.json
server/: Cargo.toml
server/src/: lib.rs
src/: csvreader.rs  lib.rs  load_model.rs  main.rs  mvpmatrix.rs  plot_graph.rs  rocket_data.rs  triangle.rs  webgl.rs
