[package]
name = "RustRocket"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
csv = "1.1"
cgmath = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
glm = "0.2.3"
map_3d = "0.1.4"
num = "0.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'Window',
]

